Add VS debugger commands in CMake Align with extended event API

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -97,3 +97,7 @@ add_custom_command(TARGET ${PROJECT} POST_BUILD
 
 #file(COPY ${CMAKE_CURRENT_SOURCE_DIR}/src/Data/
 #     DESTINATION ${CMAKE_CURRENT_BINARY_DIR}/Data/)
+
+# Automatically set the debug environment (command + working directory) for MSVC in debug and release mode
+set_property(TARGET ${PROJECT} PROPERTY VS_DEBUGGER_WORKING_DIRECTORY $<IF:$<CONFIG:DEBUG>,${INSTALL_DIR}/debug,${INSTALL_DIR}/release>)
+set_property(TARGET ${PROJECT} PROPERTY VS_DEBUGGER_COMMAND $<IF:$<CONFIG:DEBUG>,${INSTALL_DIR}/debug/HDPS.exe,${INSTALL_DIR}/release/HDPS.exe>)
